# CS2_VibeSignatures

./: .env.example  .gitattributes  .gitignore  README.md  README_CN.md  _regress_test.py  agent_runner.py  agent_skill_runner.py  analysis_config.py  analysis_output_contract.py  bump_download.py  codex_faker.json  config.yaml  copy_depot_bin.py  cpp_tests_util.py  download.yaml  download_depot.py  format_repo_files.py  gamedata_candidate.py  gamedata_contract.py  gamedata_symbol_data.py  gamedata_utils.py  gamesymbol_candidate.py  gamesymbol_pr_validation.py  gamesymbol_snapshot.py  gamesymbol_store.py  generate_reference_yaml.py  ida_analyze_bin.py  ida_analyze_util.py  ida_llm_decompile.py  ida_llm_utils.py  ida_mcp_session.py  ida_skill_preprocessor.py  process_api.py  process_api_schemas.py  process_reporter.py  process_reporter_factory.py  process_reporter_redis.py  process_reporter_redis_connection.py  process_reporter_redis_scripts.py  (+12 more)
.claude/: CLAUDE.md  SKILL_RUNNER.CLAUDE.md  SKILL_RUNNER.md  settings.json  skill_runner.settings.json
.codex/: config.toml  skill_runner.config.toml
.opencode/: skill_runner.config.json
.serena/: project.yml
configs/: 14167.yaml  14168.yaml  14168b.yaml  14169.yaml  14171.yaml  14172.yaml
cpp_tests/: igameeventmanager2.cpp
docs/: LLVM-MSVC-yvals-issue.md  TODO_bump_download.md  claude_skills_stats.yaml  process_reporter_plan.md  validation_failure-2026-07-10.md
gamesymbol_snapshot_lib/: __init__.py  analysis_sources.py  candidate.py  candidate_session.py  codec.py  config.py  diff.py  errors.py  model.py  operations.py  paths.py  pr_cli.py  pr_validation.py  snapshot_cli.py
gamesymbols/: 14167.yaml  14168.yaml  14168b.yaml  14169.yaml  14170.yaml  14171.yaml  (+1 more)
(+828 files in other folders)
