[project]
name = "cs2-vibesignatures"
version = "0.1.0"
description = "CS2 signature and offset generation utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "httpx",
    "mcp",
    "openai",
    "python-dotenv",
    "pyyaml",
    "redis",
    "requests",
    "ruamel.yaml>=0.19.1",
    "uvicorn>=0.41.0",
    "vdf",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "yamlfix>=1.19.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.yamlfix]
explicit_start = false
line_length = 120
preserve_quotes = true
sequence_style = "keep_style"
